--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ passlib
 sqlite-utils
 python-dotenv
 requests
-typing-extensions==3.10.0.2
-PyPDF2==1.26.0
-psycopg2==2.9.1
+typing-extensions
+PyPDF2
+psycopg2
